--- a/App/Voltflow/Views/Account/Panels/PasswordResetPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/PasswordResetPanel.axaml
@@ -23,11 +23,11 @@
     <StackPanel IsEnabled="{Binding !PasswordResetForm.Working}" IsVisible="{Binding CurrentAuthType, Converter={StaticResource AuthTypeConverter}, ConverterParameter=PasswordReset}">
         <!--  Email input  -->
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-            <iconPacks:PackIconBootstrapIcons
+            <iconPacks:PackIconMaterialDesign
                 VerticalAlignment="Center"
                 Classes="size-sm color-gray"
                 IsVisible="True"
-                Kind="EnvelopeFill" />
+                Kind="AlternateEmail" />
             <TextBlock Classes="size-sm color-gray weight-bold" Text="Email" />
         </StackPanel>
 
@@ -44,21 +44,21 @@
                 Watermark="example@gmail.com" />
 
             <Button Grid.Column="2" Command="{Binding GetResetPasswordToken}">
-                <iconPacks:PackIconBootstrapIcons
+                <iconPacks:PackIconMaterialDesign
                     VerticalAlignment="Center"
                     IsVisible="{Binding !PasswordResetForm.ShowPassword}"
-                    Kind="SendFill" />
+                    Kind="Send" />
             </Button>
         </Grid>
 
         <!--  Token input  -->
         <StackPanel IsEnabled="{Binding PasswordResetForm.SentToken}">
             <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-                <iconPacks:PackIconBootstrapIcons
+                <iconPacks:PackIconMaterialDesign
                     VerticalAlignment="Center"
                     Classes="size-sm color-gray"
                     IsVisible="True"
-                    Kind="KeyFill" />
+                    Kind="Key" />
                 <TextBlock Classes="size-sm color-gray weight-bold" Text="Password Reset Token" />
             </StackPanel>
             <TextBox Text="{Binding PasswordResetForm.Token}" Watermark="Enter received token here" />
@@ -67,11 +67,11 @@
         <!--  Password input  -->
         <StackPanel IsEnabled="{Binding PasswordResetForm.SentToken}">
             <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-                <iconPacks:PackIconBootstrapIcons
+                <iconPacks:PackIconMaterialDesign
                     VerticalAlignment="Center"
                     Classes="size-sm color-gray"
                     IsVisible="True"
-                    Kind="ShieldLockFill" />
+                    Kind="Lock" />
                 <TextBlock Classes="size-sm color-gray weight-bold" Text="New Password" />
             </StackPanel>
             <Grid>
@@ -91,15 +91,15 @@
 
                 <Button Grid.Column="2" Command="{Binding PasswordResetForm.TogglePassword}">
                     <StackPanel>
-                        <iconPacks:PackIconBootstrapIcons
+                        <iconPacks:PackIconMaterialDesign
                             VerticalAlignment="Center"
                             IsVisible="{Binding !PasswordResetForm.ShowPassword}"
-                            Kind="EyeFill" />
+                            Kind="Visibility" />
 
-                        <iconPacks:PackIconBootstrapIcons
+                        <iconPacks:PackIconMaterialDesign
                             VerticalAlignment="Center"
                             IsVisible="{Binding PasswordResetForm.ShowPassword}"
-                            Kind="EyeSlashFill" />
+                            Kind="VisibilityOff" />
                     </StackPanel>
                 </Button>
             </Grid>
@@ -121,7 +121,7 @@
                 HorizontalContentAlignment="Center"
                 Command="{Binding NavigateBack}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="ArrowLeft" />
+                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="ArrowLeft" />
                     <TextBlock VerticalAlignment="Center" Text="Go Back" />
                 </StackPanel>
             </Button>
@@ -134,7 +134,7 @@
                 Command="{Binding ResetPassword}"
                 IsEnabled="{Binding PasswordResetForm.SentToken}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="Check2" />
+                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="Check" />
                     <TextBlock VerticalAlignment="Center" Text="Reset" />
                 </StackPanel>
             </Button>
