--- a/App/Voltflow/Views/NavBarView.axaml
+++ b/App/Voltflow/Views/NavBarView.axaml
@@ -21,7 +21,7 @@
             Orientation="Horizontal">
             <Button Command="{Binding NavigateToMap}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="LightningChargeFill" />
+                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="Bolt" />
                     <TextBlock VerticalAlignment="Center" Text="Home" />
                 </StackPanel>
             </Button>
@@ -34,21 +34,21 @@
             Orientation="Horizontal">
             <Button Command="{Binding NavigateToCars}" IsEnabled="{Binding Authenticated}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="CarFrontFill" />
+                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="DirectionsCar" />
                     <TextBlock VerticalAlignment="Center" Text="Cars" />
                 </StackPanel>
             </Button>
 
             <Button Command="{Binding NavigateToStatistics}" IsEnabled="{Binding Authenticated}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="ListUl" />
+                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="List" />
                     <TextBlock VerticalAlignment="Center" Text="Statistics" />
                 </StackPanel>
             </Button>
 
             <Button Command="{Binding NavigateToAccount}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="PeopleFill" />
+                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="Person" />
                     <TextBlock VerticalAlignment="Center" Text="Account" />
                 </StackPanel>
             </Button>
