--- a/App/Voltflow/Styles/IconStyle.axaml
+++ b/App/Voltflow/Styles/IconStyle.axaml
@@ -23,47 +23,28 @@
     </Styles.Resources>
 
     <!--  Default disabled icon  -->
-    <Style Selector="iconPacks|PackIconBootstrapIcons:disabled">
+    <Style Selector="iconPacks|PackIconMaterialDesign:disabled">
         <Setter Property="Foreground" Value="{DynamicResource IconForegroundDisabled}" />
     </Style>
 
     <!--  Gray icon  -->
-    <Style Selector="iconPacks|PackIconBootstrapIcons.color-gray">
+    <Style Selector="iconPacks|PackIconMaterialDesign.color-gray">
         <Setter Property="Foreground" Value="{DynamicResource IconForegroundGray}" />
     </Style>
 
     <!--  Gray disabled icon  -->
-    <Style Selector="iconPacks|PackIconBootstrapIcons.color-gray:disabled">
+    <Style Selector="iconPacks|PackIconMaterialDesign.color-gray:disabled">
         <Setter Property="Foreground" Value="{DynamicResource IconForegroundGrayDisabled}" />
     </Style>
 
-    <!--  Tiny icon  -->
-    <Style Selector="iconPacks|PackIconBootstrapIcons.size-xs">
-        <Setter Property="Width" Value="10" />
-        <Setter Property="Height" Value="10" />
-    </Style>
-
     <!--  Small icon  -->
-    <Style Selector="iconPacks|PackIconBootstrapIcons.size-sm">
+    <Style Selector="iconPacks|PackIconMaterialDesign.size-sm">
         <Setter Property="Width" Value="12" />
         <Setter Property="Height" Value="12" />
     </Style>
 
-    <!--  Medium icon  -->
-    <Style Selector="iconPacks|PackIconBootstrapIcons.size-md">
-        <Setter Property="Width" Value="14" />
-        <Setter Property="Height" Value="14" />
-    </Style>
-
-    <!--  Large (default) icon  -->
-    <Style Selector="iconPacks|PackIconBootstrapIcons">
-        <Setter Property="Width" Value="16" />
-        <Setter Property="Height" Value="16" />
-    </Style>
-
-    <!--  Extra large icon  -->
-    <Style Selector="iconPacks|PackIconBootstrapIcons.size-xl">
-        <Setter Property="Width" Value="18" />
-        <Setter Property="Height" Value="18" />
+    <!--  Default icon  -->
+    <Style Selector="iconPacks|PackIconMaterialDesign">
+        <Setter Property="Margin" Value="0,0,0,1" />
     </Style>
 </Styles>
