--- a/App/Voltflow/Views/Account/Panels/EmailVerificationPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/EmailVerificationPanel.axaml
@@ -23,11 +23,11 @@
     <StackPanel IsEnabled="{Binding !EmailVerificationForm.Working}" IsVisible="{Binding CurrentAuthType, Converter={StaticResource AuthTypeConverter}, ConverterParameter=EmailVerification}">
         <!--  Token input  -->
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-            <iconPacks:PackIconBootstrapIcons
+            <iconPacks:PackIconMaterialDesign
                 VerticalAlignment="Center"
                 Classes="size-sm color-gray"
                 IsVisible="True"
-                Kind="KeyFill" />
+                Kind="Key" />
             <TextBlock Classes="size-sm color-gray weight-bold" Text="Email Verification Token" />
         </StackPanel>
         <TextBox Text="{Binding EmailVerificationForm.Token}" Watermark="Enter received token here" />
@@ -48,7 +48,7 @@
                 HorizontalContentAlignment="Center"
                 Command="{Binding NavigateBack}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="ArrowLeft" />
+                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="ArrowLeft" />
                     <TextBlock VerticalAlignment="Center" Text="Go Back" />
                 </StackPanel>
             </Button>
@@ -60,7 +60,7 @@
                 Classes="Success"
                 Command="{Binding VerifyEmail}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="Check2" />
+                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="Check" />
                     <TextBlock VerticalAlignment="Center" Text="Confirm" />
                 </StackPanel>
             </Button>
