--- a/App/Voltflow/Views/Pages/Map/SidePanels/StationInformationView.axaml
+++ b/App/Voltflow/Views/Pages/Map/SidePanels/StationInformationView.axaml
@@ -65,7 +65,7 @@
             Command="{Binding Charge}"
             IsEnabled="{Binding Selected}">
             <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="LightningChargeFill" />
+                <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="Bolt" />
                 <TextBlock VerticalAlignment="Center" Text="Charge" />
             </StackPanel>
         </Button>
