--- a/App/Voltflow/Styles/IconStyle.axaml
+++ b/App/Voltflow/Styles/IconStyle.axaml
@@ -46,5 +46,7 @@
     <!--  Default icon  -->
     <Style Selector="iconPacks|PackIconMaterialDesign">
         <Setter Property="Margin" Value="0,0,0,1" />
+        <Setter Property="Width" Value="16" />
+        <Setter Property="Height" Value="16" />
     </Style>
 </Styles>
