--- a/App/Voltflow/Views/Account/Panels/TwoFactorAuthPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/TwoFactorAuthPanel.axaml
@@ -52,7 +52,7 @@
                 HorizontalContentAlignment="Center"
                 Command="{Binding NavigateBack}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="ArrowLeft" />
+                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="ArrowBack" />
                     <TextBlock VerticalAlignment="Center" Text="Go Back" />
                 </StackPanel>
             </Button>
