--- a/App/Voltflow/Views/Pages/Statistics/StatisticsView.axaml
+++ b/App/Voltflow/Views/Pages/Statistics/StatisticsView.axaml
@@ -10,48 +10,43 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
+    <Design.DataContext>
+        <statistics:StatisticsViewModel />
+    </Design.DataContext>
 
-    <StackPanel
-        MaxWidth="256"
-        HorizontalAlignment="Stretch"
-        VerticalAlignment="Center">
-
-        <!--  this button should be only visible when someone is admin  -->
-        <Button Command="{Binding NavigateAdvanced}" Content="Advanced statistics" />
-
-        <!--  Switch this to whatever makes sense but no checkbox  -->
-        <CheckBox Content="Switch to energy used" IsChecked="{Binding Mode}" />
-
-        <lvc:PieChart
-            Title="{Binding Title}"
-            Width="800"
-            Height="450"
-            Series="{Binding PieData}" />
-
-        <Panel
-            Width="500"
-            Height="50"
-            Background="Gray">
-            <Button Command="{Binding GenerateCsv}" Content="Generate CSV" />
-        </Panel>
-
-        <Button
+    <ScrollViewer>
+        <StackPanel
+            MaxWidth="256"
             HorizontalAlignment="Stretch"
-            HorizontalContentAlignment="Center"
-            Command="{Binding NavigateHome}">
-            <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="ArrowBack" />
-                <TextBlock VerticalAlignment="Center" Text="Go Back" />
-            </StackPanel>
-        </Button>
+            VerticalAlignment="Center">
 
-        <DataGrid
-            Height="100"
-            AutoGenerateColumns="True"
-            BorderBrush="Gray"
-            BorderThickness="1"
-            GridLinesVisibility="All"
-            IsReadOnly="True"
-            ItemsSource="{Binding Elements}" />
-    </StackPanel>
+            <!--  this button should be only visible when someone is admin  -->
+            <Button Command="{Binding NavigateAdvanced}" Content="Advanced statistics" />
+
+            <!--  Switch this to whatever makes sense but no checkbox  -->
+            <CheckBox Content="Switch to energy used" IsChecked="{Binding Mode}" />
+
+            <lvc:PieChart
+                Title="{Binding Title}"
+                Width="800"
+                Height="450"
+                Series="{Binding PieData}" />
+
+            <Panel
+                Width="500"
+                Height="50"
+                Background="Gray">
+                <Button Command="{Binding GenerateCsv}" Content="Generate CSV" />
+            </Panel>
+
+            <DataGrid
+                Height="100"
+                AutoGenerateColumns="True"
+                BorderBrush="Gray"
+                BorderThickness="1"
+                GridLinesVisibility="All"
+                IsReadOnly="True"
+                ItemsSource="{Binding Elements}" />
+        </StackPanel>
+    </ScrollViewer>
 </UserControl>
